--- a/웹프기말과제/css/style.css
+++ b/웹프기말과제/css/style.css
@@ -125,3 +125,17 @@ h2 {
   height: auto;
 }
 
+.no-result-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px; 
+  font-size: 1.2rem;
+  color: #888;
+  text-align: center;
+}
+#searchResults {
+  position: relative;
+  height: 100px; /* 원하는 고정 높이 */
+}
+
